[package]
name = "nps-rs"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Kulagin <ivan@kulagin.dev>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.3.4" }
worker-macros = { version = "0.3.4" }
# Logs to console https://crates.io/crates/console_error_panic_hook
# console_error_panic_hook = { version = "0.1.1" }
# https://crates.io/crates/serde
serde_json = { version = "1" }
